@@ -1,0 +1,1 @@
+BEGIN { y = substr("abc", 2, 2) + "d" ; print y }
