@@ -1,3 +1,8 @@
+2020-05-06         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, lintplus.
+	* lintplus.awk, lintplus.ok: New files.
+
 2020-04-14         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.1.0: Release tar ball made.
